datasets/dataset_txt/requests/requests_2044.txt
tz18 commented on Jul 27, 2013
edit: sorry, I just realized Lukasa already responded to this here
This is issue 1416 again, I'm new to github and don't know how to reopen it or what, so I figured I'd do this.
I was able to install requests by downloading the zip and doing setup.py install just fine.
Anyway, it yields this:
C:\Python33\Scripts>pip install requests
Downloading/unpacking requests
  Downloading requests-1.2.3.tar.gz (348kB): 348kB downloaded
  Running setup.py egg_info for package requests

Installing collected packages: requests
  Running setup.py install for requests

      File "C:\Python33\Lib\site-packages\requests\packages\urllib3\contrib\ntlm
pool.py", line 38
        """
         ^
    SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in pos
ition 130-131: truncated \uXXXX escape

Successfully installed requests
Cleaning up...
I mean, it says successfully installed but uh, it also throws an error.